kubeBakeryPullRequestDeploy/webapp/bakery_web_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: kakey1-web-deployment
  labels:
    app: kakey1-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakey1-web
  template:
    metadata:
      labels:
        app: kakey1-web
    spec:
      containers:
      - name: kakey1-web
        image: 144.17.92.12:5000/kakey1/kakey1-web:${RUN_SALT}
        ports:
        - containerPort: 8080
