kubeBakeryPullRequestDeploy/webapp/bakery_web_svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: kakey1-web-service
spec:
  type: ClusterIP
  selector:
    app: kakey1-web
  ports:
    - port: 80
      targetPort: 8080
